# aribb24-MSVC

./: CMakeLists.txt
src/: asprintf.c  asprintf.h  convtable.h  drcs.c  md5.c
src/aribb24/: bits.h
